<resources>
    <string name="app_name">云框架Demo</string>
    <string name="app_description">本应用为学习各个组件使用积累而成的应用</string>
    <string name="show_message">显示信息</string>
    <string name="action_settings">设置</string>
    <string name="edit_message">输入信息</string>
    <string name="button_send">发送</string>
    <string name="title_activity_main">标题</string>
    <string name="title_activity_display_message">我的信息</string>
    <string name="share_key">分享</string>
    <string name="default_name">shine</string>
    <string name="title_activity_receive">ReceiveActivity</string>
    <string name="android.widget.ShareActionProviderandroid.widget.ShareActionProvider">分享</string>
    <string name="photoIntent_btn">拍照</string>
    <string name="btnIntend">拍大图片</string>
    <string name="btnIntendS">拍小图片</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="contacts">联系人</string>
    <string name="activity_contacts_list">联系人列表</string>
    <string name="activity_contact_detail">联系人详情</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">搜索</string>
    <string name="menu_add_contact">添加联系人</string>
    <string name="menu_edit_contact">编辑联系人</string>
    <string name="no_contacts">没有任何联系人</string>
    <string name="no_contact_selected">未选择联系人</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">匹配其它字段</string>
    <string name="no_address">没找到地址</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="uihider">UI隐藏</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="voicemail">声音邮件</string>
    <string name="add_voicemail">Add voicemail</string>
    <string name="sender_number">Sender phone number</string>
    <string name="time">Time in DD/MM/YYYY hh:mm</string>
    <string name="duration">Duration in seconds</string>
    <string name="mime_type">MIME type</string>
    <string name="voicemail_store_error">Error in storing voicemail!</string>
    <string name="send">Send</string>
    <string name="record_voice">Record voice</string>
    <string name="imageloader">图片加载</string>
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <string name="descr_image">Image</string>
    <string name="navigate">菜单导航</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="drawer">抽屉菜单</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="newsreader">新闻阅读</string>
    <string name="networkusage">网络浏览</string>
    <string name="settings">设置</string>
    <string name="refresh">刷新</string>
    <string name="page_title">Newest StackOverflow questions tagged \'android\'</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi 已连接.</string>
    <string name="connection_error">不能加载内存，请检查网络连接.</string>
    <string name="xml_error">解析XML错误.</string>
    <string name="photoIntent">拍照</string>
    <string name="fragments">基本框架</string>
    <string name="qiyi">奇艺视频</string>
    <string name="category_home">首页</string>
    <string name="category_channel">分类</string>
    <string name="category_search">搜索</string>
    <string name="category_account">我的资料</string>
    <string name="category_more">更多</string>
    <string name="search_hit">输入片名、主演或导演</string>
    <string name="search_text">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_search_history">清除</string>
    <string name="leave_look">离线观看</string>
    <string name="play_history">播放记录</string>
    <string name="favorite">收藏夹</string>
    <string name="my_account">我的帐号</string>
    <string name="setting">设置</string>
    <string name="feedback">信息反馈</string>
    <string name="help">使用帮助</string>
    <string name="about">更多</string>
    <string name="bitmapfun">表格图片</string>
    <string name="clear_cache_menu">清除缓存</string>
    <string name="clear_cache_complete_toast">缓存已被清除</string>
    <string name="no_network_connection_toast">未连接到网络</string>
    <string name="phtotprocessing">照片处理</string>
    <string name="webView">嵌入网页</string>
    <string name="resideMenu">Reside菜单</string>
    <string name="baiduMap">百度地图</string>
    <string-array name="sdkapi_items">
        <item>关键字搜索</item>
        <item>周边搜索</item>
        <item>手机语音识别</item>
        <item>外部语音流识别</item>
        <item>TTS</item>
        <item>反GEO</item>
        <item>线路规划demo1</item>
        <item>线路规划demo2</item>
        <item>离线数据管理</item>
        <item>自定义图层</item>
    </string-array>
    <string name="search_start">搜索</string>
    <string name="search_tips">离线检索需要使用"导航离线数据下载"demo下载数据之后才能正常使用！检索范围固定为广东省-深圳市，其他城市请修改demo源代码。</string>
    <string name="antigeo_tips">离线反geo需要使用"导航离线数据下载"demo下载数据之后才能正常使用！</string>
    <string name="asr_tips">语音识别需要使用"导航离线数据下载"demo下载广东数据之后才能正常使用！其他城市请修改demo源代码。</string>
    <string name="suggest_start">提示</string>
    <string name="search_hint">请输入关键字</string>
    <string name="record_recording">\u2026正在录音\u2026</string>
    <string name="record_recognizing">\u2026正在识别\u2026</string>
    <string name="voiceinput">外部语音流识别</string>
    <string name="voicenormal">手机语音流识别</string>
    <string name="keyword_search">关键字搜索</string>
    <string name="space_search">周边搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="search_empty">识别结果为空</string>
    <string name="search_fail">识别无效</string>
    <string name="record_start">点击开启</string>
    <string name="title_route_guide_demo">1. GPS导航(RouteGuideDemo)</string>
    <string name="title_route_plan_demo">2. 路线规划(RoutePlanDemo)</string>
    <string name="title_cruiser">3. 电子狗(CruiserDemo)</string>
    <string name="title_layer">4. 自定义地图图层(MapLayerDemo)</string>
    <string name="title_offline_data">5. 导航离线数据下载(DownloadDemo)</string>
    <string name="title_keyword_search">6. POI搜索-关键字(KeySearchDemo)</string>
    <string name="title_nearby">7. POI搜索-分类(CatalogSearchDemo)</string>
    <string name="title_degeo">8. 反GEO(ReverseGeoDemo)</string>
    <string name="title_tts">9. TTS-Text To Speech(TTSDemo)</string>
    <string name="title_asr">10. 语音识别(VoiceDemo)</string>
    <string name="title_asr_input">11. 外部语音识别(VoiceInputDemo)</string>
    <string name="title_key_verify_demo">12. 密钥验证(KeyVerifyDemo)</string>
    <string name="title_charset_change_demo">13. 简体繁体转换(CharsetChangeDemo)</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="change_to_simplified">地图切换为简体</string>
    <string name="change_to_traditional">地图切换为繁体</string>
    <string name="change_to_simplified_tips">已切换为简体，请在地图图层页看效果</string>
    <string name="change_to_traditional_tips">已切换为繁体，请在地图图层页看效果</string>
    <string name="title_activity_demo_layout">\@string/test</string>
    <string name="hello_world">Hello world!</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="on">[on]</string>
    <string name="drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="failed">Playback failed</string>
    <string name="toast_hint_gallery">Pick from gallery</string>
    <string name="toast_hint_camera">Use the camera</string>
    <string name="toast_hint_filter">Apply photo effects</string>
    <string name="toast_hint_edit">Flip/rotate the photo</string>
    <string name="toast_hint_save">Save the photo</string>
    <string name="filter_original">Original</string>
    <string name="filter_instafix">Instafix</string>
    <string name="filter_ansel">Ansel</string>
    <string name="filter_testino">Testino</string>
    <string name="filter_xpro">XPro</string>
    <string name="filter_bw">Black &amp; White</string>
    <string name="filter_sepia">Sepia</string>
    <string name="filter_cyano">Cyano</string>
    <string name="filter_retro">Retro</string>
    <string name="filter_georgia">Georgia</string>
    <string name="filter_sahara">Sahara</string>
    <string name="filter_hdr">HDR</string>
    <string name="edit_action_flip">Flip</string>
    <string name="edit_action_rotate_90_right">Rotate 90° Right</string>
    <string name="edit_action_rotate_90_left">Rotate 90° Left</string>
    <string name="edit_action_rotate_180">Rotate 180°</string>
    <string name="reverting_to_original">Reverting to original…</string>
    <string name="applying_filter">Applying %s filter…</string>
    <string name="flipping">Flipping horizontally…</string>
    <string name="rotating_90_right">Rotating 90° right…</string>
    <string name="rotating_90_left">Rotating 90° left…</string>
    <string name="rotating_180">Rotating 180°…</string>
    <string name="saved_photo_toast_message">Saved photo to %s</string>
    <string name="title_activity_show_case">ShowCaseActivity</string>
    <string name="activity_scrollview">ScrollView</string>
    <string name="activity_listview">ListView</string>
    <string name="activity_gridview">GridView</string>
    <string name="activity_webview">WebView</string>
    <string name="activity_fragment_tabs">Fragments + Tabs</string>
    <string name="activity_fragment_tabs_vp">Fragments + Tabs + ViewPager</string>
</resources>