<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:stretchColumns="3">
    <TableRow> 
    <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    
    <Button
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
   	/>
    <!-- android:onClick="sendMessage"  -->
    </TableRow>
    <TableRow>
    	 <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/contacts"
	        android:onClick="contact" />
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/uihider"
	        android:onClick="uihider" />   
        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/voicemail"
	        android:onClick="voicemail" /> 
        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/imageloader"
	        android:onClick="imageloader" />
    </TableRow>
    <TableRow>
        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/navigate"
	        android:onClick="navigate" />
        
        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/photointent"
	        android:onClick="photointent" />
        
        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/drawer"
	        android:onClick="drawer" />
        
        <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/newsreader"
	        android:onClick="newsreader" />
        
    </TableRow>
    <TableRow >
         <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/networkusage"
	        android:onClick="networkusage" />
         <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fragments"
	        android:onClick="fragments" />
         
         <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/qiyi"
	        android:onClick="qiyi" />
         
         <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/bitmapfun"
	        android:onClick="bitmapfun" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/photoprocessing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phtotprocessing"/>

    </TableRow>

    </TableLayout>

    
  
    
